# webserver-w-ap-portal-dns-redirect

./: .gitignore  CMakeLists.txt  README.md  partitions.csv
components/: README.md
components/access_point_wifi/: CMakeLists.txt  access_point_wifi.c
components/access_point_wifi/include/: access_point_wifi.h
flash_data/: index.html
main/: CMakeLists.txt  idf_component.yml  web_portal_main.c
